--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>To do pure JS</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a28248da52.js"></script>
 </head>
 <body>
 <h1>To do pure JS</h1>
+<ul class="list">
+    <li class="add-item">Add + </li>
+    <li class="accordion">
+        Some Li
+        <i class="fas fa-thumbs-up"></i>
+        <i class="fab fa-500px"></i>
+    </li>
+</ul>
+
+
 
 <script src="main.js"></script>
 </body>
